Follow up to r80773. Repair the thumbcaptions alignment.

--- a/skins/common/shared.css
+++ b/skins/common/shared.css
@@ -128,8 +128,8 @@ input#wpSummary {
 /**
  * Image captions
  */
-.thumbcaption { text-align: right; }
-.magnify { float: left; }
+.thumbcaption { text-align: left; }
+.magnify { float: right; }
 
 /**
  * Hidden categories
